--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <path d="M65,50 Q80,50 75,55" stroke="black" stroke-width="3" fill="none" />
                 </svg>
             </div>
-            <h1>Flappy Bird</h1>
+            <h1>Stupid Bird</h1>
             <p>Tap or press SPACE to flap</p>
             <button id="start-btn" class="btn">Start Game</button>
         </div>
